# cpp-task-system

./: .gitmodules  CMakeLists.txt  README.txt
CallbackExecutor/: CMakeLists.txt  CallBackExecutor.cpp  CallBackExecutor.h
PrinterExecutor/: CMakeLists.txt  Printer.cpp
PrinterTask/: Printer.cpp
RaytracerExecutor/: CMakeLists.txt  Raytracer.cpp
TaskSystem/: CMakeLists.txt  Executor.h  IdGenerator.h  Task.h  TaskSystem.cpp  TaskSystem.h  TaskSystemImpl.cpp  TaskSystemImpl.h  main.cpp
